--- a/app/templates/exam.html
+++ b/app/templates/exam.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<h1>Exam H1, My name is Enzo Sergi, I come from France, and I graduated at Georgia College in may 2024 as a student-athlete. I am currently in France taking the MMIS online. I love tennis and play this sport since I was 8 and it’s this sport that brought me to the US and Georgia College.</h1>
+
+
+{% endblock %}
