--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>about</title>
-</head>
-<body>
-<h1>Exam 1
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+
+<h1>About- Exam 1</h1>
+
+{% endblock %}
